--- a/task-list/shop.html
+++ b/task-list/shop.html
@@ -4,5 +4,13 @@
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width" />
 <link rel="stylesheet" href="style.css"/>
-<title>Tyrannophis-Characters</title>
+<title>Tyrannophis-Shop</title>
 </head>
+
+<body>
+
+
+
+</body>
+
+</html>
