--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="./images/TyrLogo.png" />
+    <link rel="icon" type="image/png" href="src/assets/images/TyrLogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tyrannophis</title>
   </head>
